# git_flow_design

./: .pre-commit-config.yaml  Git_Flow_使用教學_繁體中文.md  README.md  pyproject.toml
docs/: ai-safe-commit-architecture.md
hooks/: commit-msg  pre-commit  pre-push
safe_commit_guard/: __init__.py  cli.py  models.py  policy_loader.py
safe_commit_guard/engine/: runner.py
safe_commit_guard/git/: commits.py  context.py  staged.py
safe_commit_guard/policy/: rules.json
safe_commit_guard/report/: formatters.py
safe_commit_guard/scanners/: commitmsg_scanner.py  common.py  diff_anomaly_scanner.py  file_scanner.py  secret_scanner.py
safe_commit_guard/workflow/: confirm_gate.py  rollback.py  state_store.py
scripts/: bootstrap.sh  smoke_test.sh
tests/: test_engine.py  test_scanners.py  test_scg_smoke.py  test_utilities.py  test_workflow.py
