[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-commit-guard"
version = "0.1.0"
description = "Policy engine for preventing risky commits and pushes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
scg = "safe_commit_guard.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
safe_commit_guard = ["policy/*.json"]


[tool.setuptools.packages.find]
include = ["safe_commit_guard*"]
exclude = ["hooks*"]
